k8s/domains/identity/components/api/infra/base/identity-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: identity-api
spec:
  selector:
    matchLabels:
      app: identity-api
  replicas: 3
  template:
    metadata:
      labels:
        app: identity-api
    spec:
      terminationGracePeriodSeconds: 15
      automountServiceAccountToken: false

      containers:
        - name: identity-api
          image: ghcr.io/mstaicu/identity-api
          volumeMounts:
            - name: identity-api-jwt
              mountPath: /app/keys
              readOnly: true

          readinessProbe:
            httpGet:
              path: /readyz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 2

          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 2

      volumes:
        - name: identity-api-jwt
          secret:
            secretName: identity-api-jwt
