k8s/domains/identity/components/api/infra/base/identity-api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: identity-api
spec:
  selector:
    app: identity-api
  ports:
    - name: identity-api
      port: 3000
      targetPort: 3000
