k8s/domains/identity/components/api/infra/base/identity-api-srv.yaml
apiVersion: v1
kind: Service

metadata:
  name: identity-api-srv
spec:
  selector:
    app: identity-api
  ports:
    - name: identity-api
      port: 3000
      targetPort: 3000
