k8s/domains/identity/components/api/infra/base/identity-api-internal-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: identity-api-internal
spec:
  entryPoints:
    - http

  routes:
    - kind: Rule
      match: PathPrefix(`/v1/identity/docs`) || PathPrefix(`/v1/passkeys`) || PathPrefix(`/v1/sessions`)
      services:
        - name: identity-api
          port: 3000
