k8s/domains/identity/components/api/infra/base/identity-api-internal-jwks-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: identity-api-internal-jwks
spec:
  entryPoints:
    - http

  routes:
    - kind: Rule
      match: Path(`/.well-known/jwks.json`)
      services:
        - name: identity-api
          port: 3000
